

[project]
name = "booking-cancellation-prediction"                    
version = "0.1.0"
authors = [
    {name = "joey huang", email = "joeysugg1234@gmail.com"}
]

description = "Predict if a booking made in advance by a customer will be cancelled"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-docx>=1.0.0",     
    'numpy>=2.3.5',
    'streamlit>=1.52.2',
    'fastapi>=0.128.0',
    'pydantic>=2.7.0',
    'python-dotenv>=1.0.0',
    'uvicorn[standard]>=0.34.0',
    'psycopg2-binary>=2.9.11',
    'sqlalchemy>=2.0.0']
    

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    'pytest-mock>=3.15.1',
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.scripts]
# Format: command-name = "package.module:function"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Your code is in src/ folder